to be sent to reviewers
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@251 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -135,7 +135,10 @@
  \label{sec:TheoryUncertainties} 
  \input{tex/TheoryUncertainties.tex}
 
-\input{tex/backmatter.tex}
+ \chapter{Conclusions}
+ \input{tex/Conclusions.tex}
+ 
+%%\input{tex/backmatter.tex}
 
 \appendix
 
