--- a/doc/symbols.tex
+++ b/doc/symbols.tex
@@ -2,7 +2,7 @@
 % symbols
 \newcommand{\MET}{\ensuremath{\slashed{E}_T}\xspace}
 %\newcommand{\chiDM}{\ensuremath{\chi_{\rm{DM}}\xspace}}
-\newcommand{\chiDM}{\ensuremath{\chi\xspace}}
+\newcommand{\chiDM}{\ensuremath{\chi}\xspace}
 \newcommand{\DMParticle}{\chiDM}
 \newcommand{\mMed}{\ensuremath{M_{\rm{med}}}\xspace}
 \newcommand{\MPhi}{\ensuremath{M_{\Phi}}\xspace}% note upper case \Phi for single-top model
@@ -30,9 +30,9 @@
 \newcommand{\pT}{\ensuremath{p_{\rm T}}\xspace}
 \newcommand{\kT}{\ensuremath{k_{\rm T}}\xspace}
 \newcommand{\Qtr}{\ensuremath{Q_{\rm tr}}\xspace}
-\newcommand{\Mstar}{\ensuremath{m_{*}\xspace}}
-\newcommand{\gstar}{\ensuremath{g_{*}\xspace}}
-\newcommand{\Mcut}{\ensuremath{m_{\text{cut}}}\xspace}
+\newcommand{\Mstar}{\ensuremath{M_{*}}\xspace}
+\newcommand{\gstar}{\ensuremath{g_{*}}\xspace}
+\newcommand{\Mcut}{\ensuremath{M_{\text{cut}}}\xspace}
 \newcommand{\Ecm}{\ensuremath{E_{\text{cm}}}\xspace}
 \newcommand{\shat}{\ensuremath{\hat{s}}\xspace}
 \newcommand{\Reft}{\ensuremath{R}\xspace}
