--- a/doc/tex/DMHFModels.tex
+++ b/doc/tex/DMHFModels.tex
@@ -1,6 +1,6 @@
 
 The first part of this Chapter describes details of the models from in Section~\ref{sec:monojet_scalar}, with 
-emphasis on heavy flavour final states that arise due to the Yukawa couplings of SM quarks to the mediator. 
+emphasis on heavy flavor final states that arise due to the Yukawa couplings of SM quarks to the mediator. 
 In addition, simplified models yielding signatures of a single top of bottom quark in the final state are outlined 
 in Sections~\ref{sec:singletop, sec:singleb}. 
 These models are not as generally applicable as those in the rest of this report, as they make a number of 
