--- a/doc/tex/EWSpecificModels_Appendix.tex
+++ b/doc/tex/EWSpecificModels_Appendix.tex
@@ -68,7 +68,7 @@ corresponding in form to the effective dimension-5 operator in Section~\ref{sub:
 For most of the simplified models included in this report, the mass of
 the mediator and couplings/width are non-trivial parameters of the
 model. In these scenarios, we remain agnostic about the theory behind
-the dark matter sector and try to parametrize it in simple terms.
+the dark matter sector and try to parameterize it in simple terms.
 
 We have not addressed how to extend the simplified models to realistic
 and viable models which are consistent with the symmetries of the
@@ -98,7 +98,7 @@ interactions:
   &+&  \lambda_3(\phi_2^{\dagger}\phi_2)(\phi_1^{\dagger}\phi_1)  + \lambda_4(\phi_2^{\dagger}\phi_1)(\phi_1^{\dagger}\phi_2) + 
   \frac{\lambda_5}{2}\left[(\phi_1^{\dagger}\phi_2)^2 + (\phi_2^{\dagger}\phi_1)^2 \right],
 \end{eqnarray}
-where $\phi_1$ and  $\phi_2$ are SM and inert Higgs doublets respectively carrying the same hypercharge. These doublets can be parameterised as
+where $\phi_1$ and  $\phi_2$ are SM and inert Higgs doublets respectively carrying the same hypercharge. These doublets can be parameterized as
 \begin{equation}
 \phi_1=\frac{1}{\sqrt{2}}
 \begin{pmatrix}
