--- a/doc/tex/EWSpecificModels_EFT.tex
+++ b/doc/tex/EWSpecificModels_EFT.tex
@@ -200,11 +200,14 @@ The effective interactions introduced in (\ref{eq:Lc1c2}) and  (\ref{eq:Lc3c4}) 
 
 Since for $\Lambda_S = \Lambda_P$ the effective interactions (\ref{eq:Lc1c2}) and (\ref{eq:Lc3c4}) predict essentially the same value of the mono-photon, mono-$Z$ and mono-$W$ cross section \cite{Carpenter:2012rg,Crivellin:2015wva}, we consider below only the former couplings. We emphasize however that measurements of the jet-jet azimuthal angle difference in  \MET$+ 2 j$ events may be used to disentangle whether DM couples more strongly to the combination $B_{\mu \nu} B^{\mu \nu}$ ($W_{\mu \nu}^i W^{i, \mu \nu }$) or the product $B_{\mu \nu} \tilde B^{\mu \nu}$ ($W_{\mu \nu}^i \tilde W^{i, \mu \nu }$) of field strength tensors \cite{Cotta:2012nj,Crivellin:2015wva}.
 
-After EW symmetry breaking the interactions (\ref{eq:Lc1c2}) induce direct couplings between pairs of DM particles and  gauge bosons.  The corresponding Feynman rule reads
+After EW symmetry breaking the interactions (\ref{eq:Lc1c2}) induce direct couplings 
+between pairs of DM particles and  gauge bosons.  The corresponding Feynman rule reads:
+
 \begin{equation}  \label{eq:feynman}
 \frac{4 \hspace{0.25mm} i}{\Lambda_S^3} \; g_{V_1 V_2} \, \big (  p_1^{\mu_2} \hspace{0.25mm} p_2^{\mu_1} - g^{\mu_1 \mu_2}  \, p_1 \cdot p_2 \big ) \,,
 \end{equation}
-where $p_i$ ($\mu_i$) denotes the momentum (Lorentz index) of the vector field $V_i$ and for simplicity the spinors associated with the DM fields have been dropped. The couplings $g_{V_i V_j}$ take the form
+where $p_i$ ($\mu_i$) denotes the momentum (Lorentz index) of the vector field $V_i$ and for simplicity the spinors associated with the DM fields have been dropped. The couplings $g_{V_i V_j}$ take the form:
+
 \begin{equation} \label{eq:gViVj}
 \begin{split}
 g_{\gamma \gamma} & = c_w^2 \hspace{0.25mm} c_1+ s_w^2  \hspace{0.25mm} c_2 \,, \\[1mm]
@@ -268,7 +271,7 @@ rescaling of the cross-sections.
   }
   \hfill
   \subfloat[Acceptance.\label{fig:EFTD7_EW_Z_acc}]{%
-  	\includegraphics[width=0.7\textwidth]{figures/EW/monoZhad_SP/Sscale_newPlot}
+  	\includegraphics[width=0.7\textwidth]{figures/EW/monoZhad_SP/Sscale_newPlot.pdf}
   }
     \caption{\MET distribution and acceptance for the dimension-7 model with a hadronically decaying Z in the final state,
     for the scalar and pseudoscalar operators representing direct interactions between DM and bosons. The y axis units are multiplied by 100.}
@@ -367,7 +370,7 @@ and for reinterpretation of other models under the correct assumptions.
 To date, there are no UV-complete models available for most of those operators:
 dimension-7 operators are particularly challenging since their completion involves loops~\footnote{
 An example case for the need of loop completions is a simplified model with an additional scalar exchanged at tree level.
-The scalar couples to WW and ZZ in a gauge-invariant way, Integrating out the mediator 
+The scalar couples to $WW$ and $ZZ$ in a gauge-invariant way, Integrating out the mediator 
 does not lead to the Lorentz structure of a dimension-7 operator, so it is not possible
 to generate dimension-7 operators that satisfy gauge and Lorentz invariance at the same time.
 A model with a spin-1 mediator cannot be considered as an candidate for completion either, since dimension-7 operators
