--- a/doc/tex/EWSpecificModels_VAMediators.tex
+++ b/doc/tex/EWSpecificModels_VAMediators.tex
@@ -45,9 +45,9 @@ for certain choices of couplings for a spin-1 mediator~\cite{Bai:2012xg}.
 Run-1 searches have considered three sample cases for the product of
 up and down quark couplings to the mediator, denoted as $\xi$:
 \begin{itemize}
- \item No couplings between mediator and either up or down quarks~($\xi=0$);
- \item Same coupling between mediator and each of the quark types~ ($\xi=1$);
- \item Coupling of opposite sign between mediator and each of the quark types~($\xi=-1$).
+ \item[$\xi=0$:] No couplings between mediator and either up or down quarks;
+ \item[$\xi=1$:] Same coupling between mediator and each of the quark types;
+ \item[$\xi=-1$:] Coupling of opposite sign between mediator and each of the quark types.
 \end{itemize}
 The $\xi=-1$ case leads to a large increase in the cross-section of the process,
 and modifies the spectrum of missing transverse energy or
@@ -65,7 +65,8 @@ We leave the study of further models with cross-section enhancements due
 to different couplings to up and down quarks for studies beyond the early LHC searches
 covered in this document.
 An example of such model is the case of both DM and SM Higgs charged under a new $U(1)'$,
-with a a small mass mixing between SM Z-boson and the new \Zprime. This leads
+with a  small mass mixing between the SM Z-boson and the new \Zprime-boson.
+This leads
 to different effective DM couplings to $u_L$ and $d_L$, proportional to
 their coupling to the Z boson, detailed in Appendix~\ref{app:EWSpecificModels_Appendix}.
 
