--- a/doc/tex/MonojetLikeModels.tex
+++ b/doc/tex/MonojetLikeModels.tex
@@ -76,6 +76,7 @@ the mediator and dark matter masses, and the mediator couplings to dark matter a
 We consider two models with vector and axial-vector couplings
 between the spin-1 mediator and SM and DM fields, with
 the corresponding interaction Lagrangians:
+
 \begin{align}
 \label{eq:AV} 
 \mathcal{L}_{\mathrm{vector}} &= \gq \sum_{q={u,d,s,c,b,t}}  \Zprime_{\mu} \bar{q}\gamma^{\mu}q + \gDM \Zprime_{\mu} \bar{\chiDM}\gamma^{\mu}\chiDM \\
@@ -127,9 +128,9 @@ to the combined quark number and color factor enhancement.
 
 Therefore, the minimal set of parameters under consideration for these two models is
 \bea
-\left\{ \mDM,~\mMed,~\gq, ~ \gDM, \right\} \,.
+\left\{ \mDM,~\mMed,~\gq, ~ \gDM\right\} \,.
 \eea
-see~\cite{Buchmueller:2014yoa} for a thorough discussion. 
+See~\cite{Buchmueller:2014yoa} for a thorough discussion. 
  
 %The two simplified models described here have four free parameters: mediator mass $\mMed$, Dark Matter mass $\mDM$, coupling of the mediator to quarks $\gq$ and coupling of the mediator to Dark Matter $\gDM$,
 
@@ -210,7 +211,7 @@ with small couplings, but, also, the early part of Run~2 will not be
 sensitive to them.  The range of couplings we recommend limit the
 calculated width of the mediator to be near or below \mMed.
 
-For direct mediator searches, asymmetric couplings ($\gq \ne \gDM$ )
+For direct mediator searches, asymmetric couplings ($\gq \ne \gDM$)
 might also be considered. A scan in \gDM vs \gq can then be performed for a fixed mediator mass. Such searches, such as those for
 dijet resonances, may restrict \gq to a greater degree than
 \gDM.
@@ -372,8 +373,6 @@ The presentation of the results in the $\gq$--$\gDM$ plane for fixed masses bene
 		\fmflabel{\LARGE $\chi$}{o2}
 	\end{feynmandiagram}
 }
-
-
 	\subfloat[\label{subfig:appendixmodelSmonojetTopBox}]	{
 	\begin{feynmandiagram}[appendixmodelSmonojetTopBox]
 		\fmfleft{i1,i2}
@@ -403,7 +402,7 @@ The presentation of the results in the $\gq$--$\gDM$ plane for fixed masses bene
 
 In this section, we consider a parallel situation to the \modelDMV and \modelDMA mediators in the previous sections: a real scalar or a pseudoscalar where the associated scalar is decoupled at higher energies\sidenote{This assumption does not hold in a UV-complete model where the two components of the complex scalar mediator would be approximately degenerate.  The complex scalar case could be studied separately in the case of heavy flavor final states given the sufficiently different kinematics.}. This section is largely based on Refs.~\cite{Buckley:2014fba,Harris:2014hga} which contain a thorough discussion of these models. 
 
-Under MFV, spin-$0$ resonances look like an alternate-reality version of the SM Higgs. Relative to the \modelDMV and \modelDMA discussed above, these \modelDMS and \modelDMP models are distinguished by the special consequences of the MFV assumption, the very narrow width of the mediator and its extreme sensitivity to which decays are kinematically availabile, and the loop-induced coupling to gluons. The interaction Lagrangians are
+Under MFV, spin-$0$ resonances look like an alternate-reality version of the SM Higgs. Relative to the \modelDMV and \modelDMA discussed above, these \modelDMS and \modelDMP models are distinguished by the special consequences of the MFV assumption, the very narrow width of the mediator and its extreme sensitivity to which decays are kinematically available, and the loop-induced coupling to gluons. The interaction Lagrangians are
 
  \begin{eqnarray}
 {\cal L}_{\phi} & = &
@@ -418,7 +417,13 @@ i\gdm a \bar{\chiDM}\gamma_5\chiDM+ \frac{i a}{\sqrt{2}}\sum_i  \left(g_u y_i^u 
 \end{eqnarray}
 where the Yukawa couplings $y_i^f$ are normalized to the Higgs vev as $y_i^f = \sqrt{2}m_i^f/v$. 
 
-The couplings to fermions are proportional to the SM Higgs couplings, yet one is still allowed to adjust an overall strength of the coupling to charged leptons and the relative couplings of $u$- and $d$-type quarks. As in the preceding sections, for the sake of simplicity and straightforward comparision, we reduce the couplings to the SM fermions to a single universal parameter $\gq \equiv g_u = g_d = g_\ell$  \sidenote{The contribution from $\tau^+\tau^-$ decays plays no role for most of the parameter space considered.}. In this framework on can compare the relative discovery and exclusion power of each search, though again we emphasize the importance of searching the full set of allowed channels in case violations of these simplifying assumptions lead to signficant modifications of the decay rates which unexpectedly favor different channels than the mix obtained under our assumptions. The coupling $\gdm$ parameterises the entire dependence on the structure between the mediator and the dark sector.
+The couplings to fermions are proportional to the SM Higgs couplings, yet one is still allowed to adjust an overall strength of the coupling to charged leptons and the relative couplings of $u$- and $d$-type quarks. As in the preceding sections, for the sake of simplicity and straightforward comparison, we reduce the couplings to the SM fermions to a single universal parameter $\gq \equiv g_u = g_d = g_\ell$.\sidenote{The contribution from $\tau^+\tau^-$ decays plays no role for most of the parameter space considered.}
+The relative discovery and exclusion power of each search can be compared in this framework.
+However, we again emphasize the importance of searching the
+full set of allowed channels in case violations of these simplifying assumptions
+lead to significant modifications of the decay rates that
+unexpectedly favor different
+channels than the mix obtained under our assumptions. The coupling $\gdm$ parameterizes the entire dependence on the structure between the mediator and the dark sector.
 
 %The most general Lagrangians including new scalars or pseudoscalars will have a potential containing interactions with the SM Higgs field $h$. 
  %If there is no indication otherwise the easiest assumptions is always the most scientific to chose (also listening to some phenomenologists this seems not always to be the case ;-) )  
@@ -480,6 +485,7 @@ where $x=3$ for scalars and $x=1$ for pseudoscalars. The loop integrals are
   \eea
 \end{fullwidth}
 
+
 % If this is in the DM@LHC write-up, it is unnecessary here.
 % The first term in the width corresponds to the decay into SM fermions, and the sum runs over all kinematically available fermions, $N_c = 3$ for quarks. The second term is the decay into DM, assuming that is kinematically allowed. The factor of two between the decay into SM  fermions and into DM  is a result of our choice of normalization of the Yukawa couplings due to spin dependencies. The last term corresponds to decay into gluons.  Since we have assumed that $\gq = g_u = g_d = g_\ell$, we have included in the partial decay widths $\Gamma (\phi/a \to gg)$ only the contributions stemming from top loops, which provide the by far largest corrections given that $y_t \gg y_b$~etc. At the loop level the mediators can decay not only to gluons but also to pairs of photons and other final states if kinematical accessible. However the decay rates $\Gamma (\phi/a \to gg)$ are always larger than the other loop-induced partial widths, and in consequence the total decay widths $\Gamma_{\phi/a}$ are well approximated by the corresponding sum of the individual partial decay widths involving DM, fermion or gluon pairs. It should be noted that if  $m_{\phi/a} > 2m_t$ the total widths of $\phi/a$ will typically be dominated by the partial widths to top quarks.
 
@@ -539,7 +545,7 @@ For the mediator mass above twice the top quark mass $m_t$, the minimal width re
 \centering
 \includegraphics[width=0.45\textwidth]{figures/monojet/width_S.eps}
 \includegraphics[width=0.45\textwidth]{figures/monojet/width_P.eps}
-\caption{Minimal width as a function of mediator mass for scalar and pseudo-scalar mediator assuming couplings of 1. The total width is shown as solid lines for Dark Matter masses of \mDM=10~\gev, 30~\gev, 100~\gev and 300~\gev in black, red, brown and green, respectively. The individual contributions from Dark Matter are indicated by dotted lines with the same colors. The contribution from all quarks but top is shown as magenta dotted line and the contribution from top quarks only is illustrated by the dotted blue line. The dotted beige line shows the contribution fron the coupling to gluons. The dotted black line shows the extreme case $\Gamma_{\rm{min}}=\mMed$.}
+\caption{Minimal width as a function of mediator mass for scalar and pseudo-scalar mediator assuming couplings of 1. The total width is shown as solid lines for Dark Matter masses of \mDM=10~\gev, 30~\gev, 100~\gev and 300~\gev in black, red, brown and green, respectively. The individual contributions from Dark Matter are indicated by dotted lines with the same colors. The contribution from all quarks but top is shown as magenta dotted line and the contribution from top quarks only is illustrated by the dotted blue line. The dotted beige line shows the contribution from the coupling to gluons. The dotted black line shows the extreme case $\Gamma_{\rm{min}}=\mMed$.}
 \label{fig:monojet_width_S}
 \end{figure}
 
@@ -720,21 +726,25 @@ The size of the momentum transfer with respect to the mediator mass allows to cl
 \end{itemize}
 All three categories can be distinguished in Fig.\,\ref{fig:monojet_MstarMmed} showing the upper limit on the interaction scale $M^{*} \equiv \mMed/\sqrt{\gq\gDM}$ for vector mediator. 
 In the case of the off-shell production and the EFT limit, the first and second term in the propagator dominate, respectively, which reduces the dependence on the mediator width. Therefore, in these cases one can approximate the cross section as
+
 \begin{equation}
 \sigma \propto \gq^2\gDM^2.
 \end{equation}
 The on-shell production regime is the most interesting one as it gives the best chances for a discovery at the LHC given the cross section enhancement. The propagator term with the width cannot be neglected in this case and, in the narrow width approximation which requires $\Gamma \ll \mMed$ (this is not necessarily the case in the benchmarks considered in the scans), one can integrate
+
 \begin{equation}
 \int \frac{ds}{(s-\mMed^2)^2 + \mMed^2\Gamma^2} = \frac{\pi}{\mMed\Gamma}
 \label{eq:monojet_int}
 \end{equation}
 which further implies the cross section scaling
+
 \begin{equation}
 \sigma \propto \frac{\gq^2\gDM^2}{\Gamma}.
 \label{eq:monojet_scaling}
 \end{equation}
 The narrow with approximation is important here as it ensures an integration over parton distribution functions (PDFs) can be neglected. In other words, it is assumed the integrand in Eq.\,\ref{eq:monojet_int} is non-zero only for a small region of $s$, such that the PDFs can be taken to be constant in this range.
 Since $\Gamma \sim \gq^2+\gDM^2$, one can simplify this rule in the extreme cases as follows
+
 \begin{eqnarray}
 \sigma &\propto& \frac{\gq^2\gDM^2}{\gq^2+\gDM^2} \xrightarrow{\gq \ll \gDM} \gq^2 \label{eq:monojet_gSM} \\
 \sigma &\propto& \frac{\gq^2\gDM^2}{\gq^2+\gDM^2} \xrightarrow{\gq \gg \gDM} \gDM^2 \label{eq:monojet_gDM} \;.
@@ -827,17 +837,19 @@ We propose to deliver collider results in the $\gq$--$\gDM$ plane using the foll
 
 \paragraph{Rescaling to different mediator width}\label{paragraph:nonminimalwidth}
 
-In general it is also important to consider a larger mediator width than $\Gamma_{\rm{min}}$ in order to accommodate additional interactions of the mediator with the visible and hidden sector particles~\cite{Buckley:2014fba,Harris:2014hga}. If the narrow width approxmation applies, the cross section scaling method described above can be used to reinterpret the results presented for the minimal width, since multiplying the width by factor $n$ is equivalent to changing the coupling strength by factor $\sqrt{n}$, i.e.
+In general it is also important to consider a larger mediator width than $\Gamma_{\rm{min}}$ in order to accommodate additional interactions of the mediator with the visible and hidden sector particles~\cite{Buckley:2014fba,Harris:2014hga}. If the narrow width approximation applies, the cross section scaling method described above can be used to reinterpret the results presented for the minimal width, since multiplying the width by factor $n$ is equivalent to changing the coupling strength by factor $\sqrt{n}$, i.e.
+
 \begin{equation}
 \sigma(\gq,\gDM, n\Gamma_{\rm{min}}(\gq,\gDM)) \propto \frac{\gq^2 \gDM^2}{\Gamma_{\rm{min}}(\sqrt{n}\gq,\sqrt{n}\gDM)} \;.
 \end{equation}
 The cross section for the sample with couplings $\gq$ and $\gDM$ and modified mediator width $\Gamma = n\Gamma_{\rm{min}}$ can therefore be rescaled from a sample generated with the minimal width corresponding to the couplings scaled by $\sqrt{n}$ as described in the following formula.
+
 \begin{equation}
 \sigma(\gq,\gDM, n\Gamma_{\rm{min}}(\gq,\gDM)) = \frac{1}{n^2} \sigma(\sqrt{n}\gq,\sqrt{n}\gDM,\Gamma_{\rm{min}}(\sqrt{n}\gq,\sqrt{n}\gDM))
 \end{equation}
 The advantage of doing this is in the fact that no event selection and detector response needs to be simulated since the changes in couplings do not have an effect on the shapes of kinematic distributions.
 
-It should be noted again that this procedure is only useful when the narrow width approximation applies. Care must be taken to ensure that is the case. For example, in the \modelDMV and \modelDMA case, one quickly breaks this approxmation even for small $n$.
+It should be noted again that this procedure is only useful when the narrow width approximation applies. Care must be taken to ensure that is the case. For example, in the \modelDMV and \modelDMA case, one quickly breaks this approximation even for small $n$.
 
 \subsection{\texorpdfstring{Additional considerations for $t \bar{t}$ and $b \bar{b}$+MET signatures}{Additional considerations for ttbar/bbbar+MET signatures}}
 
