--- a/doc/tex/Presentation_Of_Experimental_Results.tex
+++ b/doc/tex/Presentation_Of_Experimental_Results.tex
@@ -20,13 +20,13 @@ One of the important developments in recent years is an active development of th
 
 In order to be able to develop such codes, it is important to get complete and systematic information from the collaborations. 
 \begin{itemize}
-	\item	\textbf{Data digitization}: Availability of digitized data is one of the primary requirement. All information given by collaborations in the form of plots should be made available in a digitized format. Platforms such as HepData can be used in oder to maintain a centralised manner. In case when HepData can not be used, digitised data can be provided via analyses twiki pages. This information primarily includes expected and observed exclusion lines along with their $\pm 1 \sigma$ uncertainty, expected and observed upper limits in case of simplified models, efficiency maps and all kinematic distributions as reported in the analysis. Units should be clearly specified. If the digitised figures are made available as a C macro or a ROOT file, the names of the objects should be clearly identifiable e.g. expected upper limits of a particular topology/model given  as a ROOT file can be labeled as \texttt{KEY: TH2D	ExpectedUpperLimit;1}. Furthermore, these digitised files can potentially contain more information (larger axes ranges) than displayed on the plot. This will help facilitate understand what happens beyond the limits displayed in the plot, e.g. a distribution for number of jets can be artificially limited to a point in the plot (for the purpose of clarity of figure) , however, this artificial limit leads to a sharp cutoff in the plot. While validating the analysis it is often necessary to compare the distributions beyond such artificial limits, having this information digitised will be of a great help in such cases. 
+	\item	\textbf{Data digitization}: Availability of digitized data is one of the primary requirement. All information given by collaborations in the form of plots should be made available in a digitized format. Platforms such as HepData can be used in oder to maintain a centralized manner. In case when HepData can not be used, digitized data can be provided via analyses twiki pages. This information primarily includes expected and observed exclusion lines along with their $\pm 1 \sigma$ uncertainty, expected and observed upper limits in case of simplified models, efficiency maps and all kinematic distributions as reported in the analysis. Units should be clearly specified. If the digitized figures are made available as a C macro or a ROOT file, the names of the objects should be clearly identifiable e.g. expected upper limits of a particular topology/model given  as a ROOT file can be labeled as \texttt{KEY: TH2D	ExpectedUpperLimit;1}. Furthermore, these digitized files can potentially contain more information (larger axes ranges) than displayed on the plot. This will help facilitate understand what happens beyond the limits displayed in the plot, e.g. a distribution for number of jets can be artificially limited to a point in the plot (for the purpose of clarity of figure) , however, this artificial limit leads to a sharp cutoff in the plot. While validating the analysis it is often necessary to compare the distributions beyond such artificial limits, having this information digitized will be of a great help in such cases. 
 \end{itemize}
 
 \section{Reimplementing analyses}
-This section lists information necessary in order to reimplement an analysis. Analysis reimplementation usually consists of several stages. Usually, one starts with reading the analysis note carefully, following which the preselection and event selection cuts are identified. These are then mimicked using a code typically written in C++. The detector simulation is carried out by using public detector simulation softwares e.g.  Delphes~\cite{deFavereau:2013fsa}.  The resulting ROOT file is then analysed using the C++ code written in the previous step.
+This section lists information necessary in order to reimplement an analysis. Analysis reimplementation usually consists of several stages. Usually, one starts with reading the analysis note carefully, following which the preselection and event selection cuts are identified. These are then mimicked using a code typically written in C++. The detector simulation is carried out by using public detector simulation software e.g.  Delphes~\cite{deFavereau:2013fsa}.  The resulting ROOT file is then analyzed using the C++ code written in the previous step.
 \begin{itemize}
-\item \textbf{Analysis documentation}: The collaborations should provide a cutflow table with every analysis, such a cutflow table will naturally define the order of cuts implemented in an analysis. There are several preselection criteria which can not be easily simulated in phenomenology, e.g. MET cleaning. Numbers should be provided after such cuts so that theorists can rescale their number of events in order to account for such cuts. Efficiencies of several reconstructed objects are given as an input to detector simulation software like Delphes. It is thus very useful to get parametrised efficiencies for reconstructed objects (as a function of the rapidity $\eta$ and/or transverse momentum $p_T$), along with the working points at which they were evaluated (e.g. loose, tight selection). Object definitions should be clearly identifiable. 
+\item \textbf{Analysis documentation}: The collaborations should provide a cutflow table with every analysis, such a cutflow table will naturally define the order of cuts implemented in an analysis. There are several preselection criteria which can not be easily simulated in phenomenology, e.g. MET cleaning. Numbers should be provided after such cuts so that theorists can rescale their number of events in order to account for such cuts. Efficiencies of several reconstructed objects are given as an input to detector simulation software like Delphes. It is thus very useful to get parametrized efficiencies for reconstructed objects (as a function of the rapidity $\eta$ and/or transverse momentum $p_T$), along with the working points at which they were evaluated (e.g. loose, tight selection). Object definitions should be clearly identifiable. 
 \item \textbf{Validation}: Validation corresponds to re-deriving the results as given by collaborations in order to verify that the implementation of the analysis is correct. Usually most of the bug catching takes place in the phase of validation. The following items are necessary in order to recreate the results. 
 \begin {itemize}
 	\item Monte Carlo generators: Monte Carlo generators along with the exact versions used to produce the event files should be listed. 
