--- a/doc/tex/ScalarModels.tex
+++ b/doc/tex/ScalarModels.tex
@@ -11,7 +11,7 @@ Assuming dark matter is a fermion $\chiDM$ who's interactions with the Standard 
 {\cal L}_{{\rm fermion},\phi} & = & {\cal L}_{\rm SM}+i\bar{\chiDM} \slashed{\partial} \chiDM + \mDM \bar{\chiDM}\chiDM + \left| \partial_\mu \phi \right|^2+\frac{1}{2}m_\phi^2 \phi^2 + g_\chiDM \phi \bar{\chiDM}\chiDM+ \sum_f \frac{g_v y_f}{\sqrt{2}} \phi \bar{f} f, \label{eq:scalarlag} \\
 {\cal L}_{{\rm fermion},a} & = & {\cal L}_{\rm SM}+i\bar{\chiDM} \slashed{\partial} \chiDM + \mDM \bar{\chiDM}\chiDM + \left| \partial_\mu a \right|^2+\frac{1}{2}m_a^2 a^2 + i g_\chiDM a \bar{\chiDM}\gamma^5 \chiDM+ \sum_f i \frac{g_v y_f}{\sqrt{2}} a \bar{f}\gamma^5 f. \label{eq:pseudoscalarlag}
 \end{eqnarray}
-Here, we have made several simplifying assumptions. First, we assume that the coupling to visible-sector fermions is MFV, and proportional to a single universal coupling $g_v$. Thus, the coupling of $\phi$ or $a$ to any flavor of fermion $f$ is set by $g_v \times y_f$, where $y_f$ is the Standard Model yukawa $y_f = \sqrt{2}m_f/v$.\footnote{This normalization for the yukawas assumes $v = 246$~GeV and $y_t \sim 1$.} It is not hard to imagine scenarios that still possess the positive qualities of the MFV assumption but have non-universal $g_v$; for example, couplings only to up-type quarks, or only to leptons. We do not single out any of these options here in our benchmark models, but remind the reader that it is desirable to have experimental constraints sensitive to couplings to different flavors of fermions. Similarly, since there is no ``MFV'' motivation for the structure of dark matter-mediator couplings in the dark sector, and it is of course not known whether the dark matter mass $\mDM$ is set by only by the Higgs vacuum expectation value $v$ (indeed this would seem to be somewhat unlikely, given the direct detection constraints on dark matter as containing a pure $SU(2)_L$ doublet) we parametrize the dark matter-mediator coupling by $g_\chiDM$, rather than by some number times a yukawa coupling proportional to $\mDM$. 
+Here, we have made several simplifying assumptions. First, we assume that the coupling to visible-sector fermions is MFV, and proportional to a single universal coupling $g_v$. Thus, the coupling of $\phi$ or $a$ to any flavor of fermion $f$ is set by $g_v \times y_f$, where $y_f$ is the Standard Model Yukawa $y_f = \sqrt{2}m_f/v$.\footnote{This normalization for the yukawas assumes $v = 246$~GeV and $y_t \sim 1$.} It is not hard to imagine scenarios that still possess the positive qualities of the MFV assumption but have non-universal $g_v$; for example, couplings only to up-type quarks, or only to leptons. We do not single out any of these options here in our benchmark models, but remind the reader that it is desirable to have experimental constraints sensitive to couplings to different flavors of fermions. Similarly, since there is no ``MFV'' motivation for the structure of dark matter-mediator couplings in the dark sector, and it is of course not known whether the dark matter mass $\mDM$ is set by only by the Higgs vacuum expectation value $v$ (indeed this would seem to be somewhat unlikely, given the direct detection constraints on dark matter as containing a pure $SU(2)_L$ doublet) we parameterize the dark matter-mediator coupling by $g_\chiDM$, rather than by some number times a Yukawa coupling proportional to $\mDM$. 
 
 Finally, the most general Lagrangians including new scalars or pseudoscalars should have a potential $V$ containing possible interactions with the Higgs $h$. As stated in the introduction, we choose to take a more minimal set of possible interactions, and leave discussions of the Higgs interactions to the sections on the Higgs Portal.
 
@@ -35,7 +35,7 @@ These Simplified Models have four free parameters: the universal coupling $g_v$,
 \Gamma_a & = & \sum_f N_C \frac{y_f^2 g_v^2 m_a}{16 \pi} \left(1-\frac{4 m_f^2}{m_a^2}\right)^{1/2} + \frac{g_\chiDM^2 m_a}{8 \pi} \left(1-\frac{4 \mDM^2}{m_a^2}\right)^{1/2}  \\
 & & \nonumber + \frac{\alpha_S^2 y_t^2 g_v^2 m_a^3}{8 \pi^3 v^2} \left| f_a\left(\tfrac{4m_t^2}{m_\phi^2} \right)\right|^2+ \frac{\alpha^2 y_t^2 g_v^2 m_a^3}{4\times 9 \pi^3 v^2} \left| f_a\left(\tfrac{4m_t^2}{m_a^2} \right)\right|^2 
 \end{eqnarray}
-Here, the first term in each width corresponds to the decay into Standard Model fermions (the sum runs over all kinematically available fermions, $N_C = 3$ for quarks and $N_C = 1$ for leptons). The second term is the decay into dark matter (assuming that this decay is kinematically allowed), and the last two terms correspond to decay into gluons and photon pairs. The factor of 2 between the decay into Standard Model fermions and into dark matter is a result of our choice of normalization of the yukawa couplings.
+Here, the first term in each width corresponds to the decay into Standard Model fermions (the sum runs over all kinematically available fermions, $N_C = 3$ for quarks and $N_C = 1$ for leptons). The second term is the decay into dark matter (assuming that this decay is kinematically allowed), and the last two terms correspond to decay into gluons and photon pairs. The factor of 2 between the decay into Standard Model fermions and into dark matter is a result of our choice of normalization of the Yukawa couplings.
 
 In colliders, if the mediator is produced on-shell, as is the primary mode of dark matter production when $\mDM < m_{\phi/a} /2$ and $m_{\phi/a} \ll \sqrt{\hat{s}}$ (where $\sqrt{\hat{s}}$ is some characteristic c.o.m. at the collider in question), the cross section of dark matter production will be proportional to the branching ratio into dark matter. The total production of the mediator will go as $g_v^2$, and the decay into invisible dark matter will be $\propto g_\chiDM^2/\Gamma_{\phi/a}$, with the appropriate kinematic factors. This confounds the easy factorization of limits on the four-dimensional parameter space, since while the total cross section will have an overall dependence on the product $g_\chiDM^2 \times g_v^2$, it will also depend on $\Gamma_{\phi/a}$, which even in the minimal model depends on the sum of $g_\chiDM^2$ and $g_v^2$ (with kinematic factors inserted). 
 
