--- a/doc/tex/SingleTop.tex
+++ b/doc/tex/SingleTop.tex
@@ -176,7 +176,7 @@ Under the form of Eq.~\eqref{eq:lagrangianResonant}, the Lagrangian is the one
 introduced in the original monotop search proposal~\cite{AndreaFuksMaltoni}. It has been
 used by the CMS collaboration for Run I analyses after neglecting all pseudoscalar components
 of the couplings and adding the vector resonance case for which minimality
-requirements are difficult to accomodate~\cite{CMSmonotop}. In contrast, the
+requirements are difficult to accommodate~\cite{CMSmonotop}. In contrast, the
 study of Ref.~\cite{Boucheneb:2014wza} has imposed electroweak gauge invariance and
 required minimality. This enforces all new couplings to be right-handed so that
 \begin{equation}
@@ -266,7 +266,7 @@ As for the resonant case, the Lagrangian of Eq.~\eqref{eq:lagrangianNonResonantV
 has been used by CMS after reintroducing the scalar option for the invisible
 state and neglecting all pseudoscalar interactions~\cite{CMSmonotop}. as
 already mentioned, a simplified setup motivated by gauge invariance and
-minimality has been prefered so that, as shown in Ref.~\cite{Boucheneb:2014wza}, we
+minimality has been preferred so that, as shown in Ref.~\cite{Boucheneb:2014wza}, we
 impose all interactions to involve right-handed quarks only in order to simplify the model phenomenology,
 \begin{equation}
 a^1_{FC} = b^1_{FC} = \frac12 a_R
@@ -276,7 +276,7 @@ where $a_R$ denotes a $3\times 3$ matrix in flavor space.
 \newthought{Model parameters and assumptions}
  
 The models considered as benchmarks for the first LHC searches
-contain further assumptions in terms of the flavour and chiral structure of the model
+contain further assumptions in terms of the flavor and chiral structure of the model
 with respect to the full Lagrangians of equations~\eqref{eq:lagrangianResonant} and~\eqref{eq:lagrangianNonResonantVector}.
 
 %We only consider right-handed quark components, in order to simplify the model phenomenology. 
