--- a/doc/tex/TChannelModels.tex
+++ b/doc/tex/TChannelModels.tex
@@ -38,7 +38,7 @@ These mediators have SM gauge representations under $(SU(3), SU(2))_Y$ of $(3,2)
 
 \vspace{5mm}
 
-As for the \schannel models, we assume Minimal Flavour Violation (MFV), setting the mediator masses for each flavour equal; the same logic also applies to the couplings $g$. Coupling to the third generation breaks the MFV assumption and is thus forbidden. The free parameters are then
+As for the \schannel models, we assume Minimal Flavor Violation (MFV), setting the mediator masses for each flavor equal; the same logic also applies to the couplings $g$. Coupling to the third generation breaks the MFV assumption and is thus forbidden. The free parameters are then
 
 \begin{equation}
 \{ \mDM,\, \Mphi,\, g\}.
@@ -321,7 +321,7 @@ DM searches should also directly test their sensitivity to the MSSM benchmark mo
 \subsection{Parameter scan}
 
 Ref.~\cite{Papucci:2014iwa} studies the parameter space and obtains
-bounds on this model from LHC Run 1 mono-jet and dijets+MET data. The Forum did not exhaustively compare the kinematic distributions of this model as was done in the \schannel case. While this means the recommendations below should be taken with more caution, the model is plausibile and distinctive, and it should be included in the design of LHC searches.
+bounds on this model from LHC Run 1 mono-jet and dijets+MET data. The Forum did not exhaustively compare the kinematic distributions of this model as was done in the \schannel case. While this means the recommendations below should be taken with more caution, the model is plausible and distinctive, and it should be included in the design of LHC searches.
 
 As in the \schannel models, scans should be performed over
 $\mDM$ and $\Mphi$. The viable ranges of both parameters nearly
