--- a/doc/tex/EFTValidity.tex
+++ b/doc/tex/EFTValidity.tex
@@ -10,37 +10,45 @@
 %\section*{EFT Validity and Truncation Summary}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-Effective Field Theories (EFTs) are an extremely useful
-framework for interpreting DM searches at the LHC.
+Most of this report has focused on simplified models as
+an alternative to EFTs.  Here, we wish to emphasize that
+Effective Field Theories (EFTs) can remain a useful
+tool in the interpretation of DM searches at the LHC.
 Given our current lack of knowledge about the nature of a DM particle and
 its interactions, a model independent interpretation of the collider bounds
 appears mandatory.  This approach should be complemented with
-an interpretation within a choice of simplified models.
-However, these models cannot exhaust the set of possible completions of
+an interpretation within a choice of simplified models, which
+cannot exhaust the set of possible completions of
 an effective Lagrangian.
-EFTs must be used with caution at colliders, where the energy
-scale of the interaction can be above the point where the EFT
-approximation is valid.
+Even when the application of EFT is not appropriate for the prediction of kinematics or cross sections, it does predict specific final states and can motivate experimental searches.
 
-To illustrate the problem, consider an effective interaction
+As we have learned, EFTs do not truly represent a model-independent representation of the data for the current collider sensitivity.   Ideally, experimental results would be cast into bounds of allowed signal events in different kinematic regions.   Until this is done systematically by the analyses, we present
+several prescriptions in the literature
+that can be used to quote bounds on EFT operators.
+
+For the uninitiated, we illustrate the problem with EFTs by considering an effective interaction
 $$ (\bar\psi\psi)(\bar\chiDM\chiDM) {g\over \Lambda^2}$$
 that couples SM and DM fields.   The strength of this interaction can
 be parametrized by $f={g\over \Lambda^2}$.
 A monojet signature can be generated
-by applying perturbation theory in the QCD coupling (assuming $\phi$\Todo{right symbol?} is
+by applying perturbation theory in the QCD coupling (assuming $\psi$ is
 a quark, for example).
 An experimental search will place a limit on $f$.   
-For a fixed $f$, a small value of $g$ will require
-a small value of $\Lambda$.   The EFT approximation breaks down
+For a fixed $f$, a small value of $g$ will correspond
+to a small value of $\Lambda$.   The EFT approximation breaks down
 if $Q>\Lambda$, where $Q$ is a typical hard scale of the process.
 One reasonable choice is $\Qtr^2=p(\bar\chiDM\chiDM)^2$, i.e.
 the momentum flow through
-the \schannel.  
-On the other hand, large $\Lambda$
-implies large $g$, raising the question if perturbation theory
+the \schannel.
+Thus the limit on small $g$ can only be reliable if the
+kinematic region $Q>\Lambda$ is removed from the prediction.
+On the other hand, if, for the same value of $f$, a large $\Lambda$
+is assumed so that the full kinematic region can be used, a large value of
+$g$ is required, raising the question if perturbation theory
 is even applicable.     
 
-Here we summarize some methods that can be used to ensure the validity of the EFT approximation. These methods are described in detail in Refs.~\cite{Busoni:2013lha,Busoni:2014sya,Busoni:2014haa,Aad:2015zva,Racco:2015dxa}. We then propose a recommendation for the presentation of EFT results for Run-2 LHC benchmarks.
+Here we summarize some methods that can be used to
+improve the reliability of the EFT approximation. These methods are described in detail in Refs.~\cite{Busoni:2013lha,Busoni:2014sya,Busoni:2014haa,Aad:2015zva,Racco:2015dxa}.   We then propose a recommendation for the presentation of EFT results for Run-2 LHC benchmarks.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{\texorpdfstring{Outline of the procedure described in Refs.~\cite{Busoni:2014sya,Aad:2015zva}}{Outline of the procedure described in Refs.}}
@@ -53,7 +61,7 @@ expanding the propagator for the mediator
 in powers of $\Qtr^2/\mMed^2$, truncating at lowest order, and combining the remaining parameters into a single parameter \Mstar (also called $\Lambda$ in the literature).
 For an example scenario with a \Zprime-type mediator (leading to some combination of operators D5 to D8 in the EFT limit)
 this corresponds to setting
-%
+ 
 \be
 \frac{\gDM \gq}{Q_{\rm tr}^2-M^2}=-\frac{\gDM \gq}{M^2}\left(1+\frac{Q^2_{\rm tr}}{M^2}+ \mathcal{O} \left(\frac{Q^4_{\rm tr}}{M^4}\right)\right) \simeq -\frac{1}{{\Mstar}^2},
 \ee
@@ -71,7 +79,7 @@ kinematics of the signal
 and enforce the validity of the EFT approximation (after the imposition of the event selection of the analysis).  This truncated signal can then be used to derive the new, truncated limit on $\Mstar$ as a function of $(\mDM, \gDM \gq)$.
  
 For the example D5-like operator, $\sigma \propto {\Mstar}^{-4}$, and so there is a simple rule for converting a rescaled cross section into a rescaled constraint on ${\Mstar}$ if the original limit is based on a simple cut-and-count procedure. Defining $\sigma_{\rm EFT}^{\rm cut}$ as the cross section truncated such that all events pass the condition $\sqrt{\gDM \gq} \Mstar^{\rm rescaled} > \Qtr$, we have
-%
+ 
 \be
 \Mstar^{\rm rescaled} = \left(\frac{\sigma_{\rm EFT}}{\sigma_{\rm EFT}^{\rm cut}}\right)^{1/4} \Mstar^{\rm original},
 \ee
@@ -96,6 +104,7 @@ To be specific, consider the basic mono-jet process with kinematics
 $p_1 + p_2 \to k + p_{\bar\chiDM\chiDM}$: $k$ is the momentum of the outgoing jet, whereas $p_{\bar\chiDM\chiDM}$ is the momentum of the $\bar\chiDM\chiDM$ pair and
 $p_{\bar\chiDM\chiDM}=\Qtr$.  $E_\text{cm}^2 = (p_1+p_2)^2 > \Qtr^2$.
 The condition ensuring the validity of the EFT is, by definition of \Mcut,
+
 \begin{equation}
 \label{Ecm<Mcut}
 E_\text{cm}<M_\text{cut}\,.
