--- a/doc/tex/EWSpecificModels_MonoHiggs.tex
+++ b/doc/tex/EWSpecificModels_MonoHiggs.tex
@@ -193,32 +193,30 @@ while the DM coupling to the \Zprime are proportional to the baryon number and t
 ($g_{\chiDM} = B g_B$). No leptonic couplings of the \Zprime are allowed, thus evading dilepton constraints. 
 After incorporating the mixing of the baryonic and SM Higgs bosons, this model is 
 is described by the following Lagrangian term at energies below $m_{\Zprime}$: 
- \be \label{U1Beft}
+
+\be \label{U1Beft}
  L_{\rm eff} = - \frac{\gq \gDM }{m_{\Zprime}^2} \bar{q} \gamma^\mu q \bar\chiDM \gamma_\mu \chiDM \Big( 1 + \frac{g_{h \Zprime \Zprime} }{m_{\Zprime}^2} h \Big) \, ,
- \ee
+\ee
 
 The first term of this equation gives rise to a term that is equivalent to the 
 radiation of a jet (or another EW gauge boson) in the initial state. 
 The second term describes the interaction between the \Zprime and the SM Higgs boson,
-via the coupling $g_{h \Zprime \Zprime} = \frac{m_{\Zprime}2 sin\theta}{v_B}$, where
-$sin\theta$ is the mixing angle between the SM Higgs and the baryonic Higgs $h_B$, and $v_B$ is the
+via the coupling $g_{h \Zprime \Zprime} = \frac{m_{\Zprime}2 \sin\theta}{v_B}$, where
+$\sin\theta$ is the mixing angle between the SM Higgs and the baryonic Higgs $h_B$, and $v_B$ is the
 Baryonic Higgs vacuum expectation value. 
 
 %TODO: 
 %	1- Mention sensitivity difference wrt monojet? 
 %	2- Mention why we don't consider the dark Z model?]}
 
+The predictions of the model depend upon the two additional
+parameters beyond an s-channel simplified model, namely the
+mixing angle between baryonic Higgs $h_B$ and the SM-like Higgs boson $\sin\theta$ and the coupling of the mediator to SM-like Higgs boson, $g_{h\Zprime \Zprime}$.
+Thus, a full model is specified by:
+($\mMed ,\, \mDM ,\, \gDM ,\, \gq ,\, \sin\theta ,\, g_{h\Zprime \Zprime})$.
+
 \subsubsection{Parameter scan} 
 
-The model is described by six parameters:
-\begin{enumerate}
-	\item the mediator mass \mmed, (also referred to as $m_{\Zprime}$)
-	\item mass of dark matter, \mDM
-	\item coupling of \Zprime mediator to dark matter, \gDM
-	\item coupling of the mediator to quarks, \gq
-	\item mixing angle between baryonic Higgs $h_B$ and the SM-like Higgs boson, $\sin\theta$
-	\item coupling of the mediator to SM-like Higgs boson, $g_{h\Zprime \Zprime}$
-\end{enumerate}
 The width of the \Zprime mediator is calculated using all possible decays to SM particles (quarks) and to pairs of DM particles if kinematically allowed.
 
 The dependence of the missing transverse momentum (\MET) on the model parameters 
@@ -232,7 +230,7 @@ For this reason, the same grid in \mmed, \mdm as for the vector mediator
 of the jet+\MET search (Table~\ref{tab:mDMmMedScan_VA}) is chosen as a starting point. 
 The coupling $g_{h\Zprime \Zprime}$, along with \gq and \gDM, are subject to perturbativity bounds:
 $$\gq, \gDM < 4\pi $$ and $$  g_{h \Zprime \Zprime} < \sqrt{4\pi}m_{\Zprime}\sin\theta$$ 
-The value $g_{h \Zprime \Zprime}/m_{\Zprime} = 1.0$ is chosen as a benchmark value for the generation 
+The value $g_{h \Zprime \Zprime}/m_{\Zprime} = 1$ is chosen as a benchmark value for the generation 
 of Monte Carlo samples since it maximizes the cross section (as shown in the following paragraph)
 without violating the bounds. The mediator-DM coupling \gDM is fixed to 1, and  
 the mediator-quark $g_{q}$ coupling is fixed to 1/3. 
@@ -328,6 +326,16 @@ $$y = -0.12 - 3.4\times10^{-3}x + 2.7\times10^{-4}x^2$$.
 For $m_{med} = 1$~\tev, the fit function is 
 is $$y = 0.0012 - 2.4\times10^{-7}x + 1.5\times10^{-7}x^2$$
 
+\be
+y = -0.12 - 3.4\times10^{-3}x + 2.7\times10^{-4}x^2.
+\ee
+For $\mMed = 1$ TeV, the fit function is 
+is:
+
+\be
+y = 0.0012 - 2.4\times10^{-7}x + 1.5\times10^{-7}x^2.
+\ee
+
 \begin{figure}[hbpt!]
 	\includegraphics[width=0.49\linewidth]{figures/EW/monoH/zprime_xs_med_100}
 	\includegraphics[width=0.49\linewidth]{figures/EW/monoH/zprime_xs_med_1000}
@@ -343,24 +351,27 @@ is $$y = 0.0012 - 2.4\times10^{-7}x + 1.5\times10^{-7}x^2$$
 
 A real scalar singlet $S$ coupling to DM can be introduced as a portal between SM and the dark sector 
 through the Higgs field. The new scalar mixes with the SM Higgs boson, and couples to DM through a Yukawa term $y_\chiDM$. 
-The relevant terms in the scalar potential are
+The relevant terms in the scalar potential are:
+
 \begin{align}
 &V \supset a |H|^2 S + b |H|^2 S^2 + \lambda_h |H|^4 \notag \\
 & \;\;\longrightarrow \tfrac{1}{2} a (h +  v)^2 S + \tfrac{1}{2}b (h +  v)^2 S^2 + \frac{\lambda_h}{4} (h +  v)^4 ,
 \label{singlethiggsmix}
 \end{align}
-where $a,b$ are new physics couplings and $\lambda_h$ is the Higgs quartic.  
+where $a,b$ are new physics couplings and $\lambda_h$ is the Higgs quartic coupling.  
 
 The additional Lagrangian terms for this model are: 
+
 \be \label{LintScalar2}
-L \supset - y_\chiDM \bar\chiDM \chiDM (  cos\theta\:S - sin\theta\: h ) - \frac{m_q}{v} \bar q q (cos\theta\: h + sin\theta\: S )  \,
+L \supset - y_\chiDM \bar\chiDM \chiDM (  \cos\theta\:S - \sin\theta\: h ) - \frac{m_q}{v} \bar q q (\cos\theta\: h + \sin\theta\: S )  \,
 \ee
 where $\theta$ is the mixing angle between the Higgs boson and the new scalar. 
 
 Mono-Higgs signals in this second model arise through processes shown in Fig.~\ref{fig:feyn_prod_monoH_S} (a,b), or through 
 the radiation of a Higgs boson from the  $t$ quark in the production loop, in Fig.~\ref{fig:feyn_prod_monoH_S} (c). 
 The first two processes depend on the $h^2 S$ and $h S^2$ cubic terms in Eq.~\eqref{singlethiggsmix}.  
-At leading order in $\sin\theta$, these terms are
+At leading order in $\sin\theta$, these terms are:
+
 \be
 V_{\rm cubic} \approx \frac{\sin\theta}{v} ( 2 m_h^2 + m_S^2) h^2 S  + b \, v \, h \, S^2 + ...
 \ee
@@ -498,18 +509,21 @@ represented in the diagram in Fig. \ref{fig:feyn_prod_monoH} (b).
 
 The motivation for coupling the dark matter to the pseudoscalar is that dark matter coupling to a Higgs or \Zprime boson is generically 
 constrained by other signal channels and direct detection. 
-An advantage of including this model is that it has different kinematics  due to the on-shell \Zprime production, 
-where for heavy \Zprime masses the \MET and pT spectra are much harder.
+A reason to consider this model
+is that it has different kinematics  due to the on-shell \Zprime production, 
+where for heavy \Zprime masses the \MET and $p_T$ spectra are much harder.
 This model can satisfy electroweak precision tests and constraints from dijet resonance searches, 
 and still give a potentially observable Higgs+\MET signal.
  
  This model comprises two doublets, where $\Phi_u$ couples to up-type quarks and $\Phi_d$ couples to down-type
  quarks and leptons:
+
  \begin{equation}
  -{\cal L} \supset  y_u Q \tilde \Phi_u \bar u + y_d Q \Phi_d \bar d + y_e L \Phi_d \bar e  + {\rm h.c.}
  \end{equation}
  
  After electroweak symmetry breaking, the Higgs doublets attain vacuum expectation values $v_u$ and $v_d$, and in unitary gauge the doublets are parametrized as
+
  \begin{align}
  \Phi_d &= \frac{1}{\sqrt{2}}
  \begin{pmatrix}
@@ -543,13 +557,17 @@ The Higgs vacuum expectation values lead to $Z-\Zprime$ mass mixing, with a mixi
   
 The production cross section for this model scales as $(g_z)^2$, as the decay width for this process
 to leading order in $\epsilon$ (Eq.~\ref{eq:epsilon}) is
+
 \begin{equation}
 \Gamma_{\Zprime \to h A^0} =  (g_z \cos \alpha \cos \beta)^2 \frac{|p|}{24 \pi} \frac{|p|^2}{M_{\Zprime}^2}.
 \end{equation}
-where the center of mass momentum for the decay products $|p| =
-\frac{1}{2 M_{\Zprime}} \lambda^{1/2}(M_{\Zprime}^2,m_h^2, m_{A^0}^2)$, and
-$\lambda$ is the K\"{a}llen triangle function\sidenote{\vskip -2.5\baselineskip\begin{align*}\lambda(c_1,c_2,c_3) \equiv&\;c_1^2 + c_2^2 + c_3^2\\ 
-						&- 2(c_1 c_2 + c_2 c_3 + c_3 c_1)\end{align*}}.
+where the center of mass momentum for the decay products
+$|p| = \frac{1}{2 M_{\Zprime}} \sqrt{ (M_{\Zprime}^2 - (m_h + m_{A^0})^2)
+(M_{\Zprime}^2 - (m_h - m_{A^0})^2)}$.
+
+%\frac{1}{2 M_{\Zprime}} \lambda^{1/2}(M_{\Zprime}^2,m_h^2, m_{A^0}^2)$, and
+%$\lambda$ is the K\"{a}llen triangle function\sidenote{\vskip -2.5\baselineskip%\begin{align*}\lambda(c_1,c_2,c_3) \equiv&\;c_1^2 + c_2^2 + c_3^2\\ 
+%						&- 2(c_1 c_2 + c_2 c_3 + c_3 c_1)\end{align*}}.
    
 %  Diagonalizing the gauge
 % boson mass matrix, the tree-level masses of the $Z$ and \Zprime bosons are given by
@@ -578,7 +596,7 @@ $\lambda$ is the K\"{a}llen triangle function\sidenote{\vskip -2.5\baselineskip\
  	\item the pseudoscalar mass $M_{A^0}$,
  	\item the DM mass \mDM,
  	\item the \Zprime mass, $M_{\Zprime}$,
-    \item $\tan{\beta} (\equiv v_u/v_d)$,
+        \item $\tan{\beta} (\equiv v_u/v_d)$,
  	\item the \Zprime coupling strength $g_z$. 
  \end{itemize}
 
@@ -696,6 +714,7 @@ The kinematic distributions with varying $M_{\Zprime}$ for fixed $M_{A^0}$ are s
       
  This model also allows for an additional source of Higgs plus \MET signal with a similar kinematics (Fig.~\ref{fig:DMH_zpincl}, shown with detector simulation 
  samples) to the signal process from the decay of $\Zprime \to h Z$, where the $Z$ decays invisibly. The partial decay width for the \Zprime is:
+
  \begin{equation}
  \Gamma_{\Zprime \to hZ}  = (g_z \cos \alpha \sin \beta)^2 \frac{|p|}{24 \pi} \left( \frac{ |p|^2 }{M_{\Zprime}^2} + 3 \frac{M_Z^2}{M_{\Zprime}^2} \right),
  \end{equation}
